# agent

./: .gitignore  README.md  baz.txt  pyproject.toml  release-please-config.json
.github/workflows/: auto_pull_request.yml
src/: agent.py  main.py
tests/: test_agent.py
